--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,11 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Start app
+      run: npm start &
+    
+    - name: Wait for server
+      run: npx wait-on http://localhost:4000/graphql
+
     - name: Run tests
       run: npm test
