--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^11.7.1",
     "mochawesome": "^7.1.3",
     "sinon": "^21.0.0",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "wait-on": "^9.0.1"
   }
 }
