--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Start app
+    - name: Start Servers Rest & GraphQL
       run: npm start &
     
     - name: Wait for server
