--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Start GraphQL Server
       run: |
         npm run start-graphql &
-        npx wait-on http://localhost:4000/graphql --timeout 60000
+        npx wait-on http://0.0.0.0:4000/graphql --timeout 60000
 
     - name: Run GraphQL External Tests
       run: npm run test-graphql-external
@@ -32,7 +32,7 @@ jobs:
     - name: Start Rest Server
       run: |
         npm run start-rest &
-        npx wait-on http://localhost:3000 --timeout 60000
+        npx wait-on http://0.0.0.0:3000 --timeout 60000
 
     - name: Run Rest External Tests
       run: npm run test-rest-external
