--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,24 +18,24 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Start GraphQL Server
-      run: |
-        npm run start-graphql &
-        npx wait-on http://localhost:4000/graphql --timeout 60000
-
-    - name: Run GraphQL External Tests
-      run: npm run test-graphql-external
-
-    - name: Run GraphQL Controller Tests
-      run: npm run test-graphql-controller
-
     - name: Start Rest Server
       run: |
         npm run start-rest &
-        npx wait-on http://localhost:3000 --timeout 60000
+        npx wait-on tcp:3000 --timeout 60000
 
     - name: Run Rest External Tests
       run: npm run test-rest-external
 
     - name: Run Rest Controller Tests
       run: npm run test-rest-controller
+
+    - name: Start GraphQL Server
+      run: |
+        npm run start-graphql &
+        npx wait-on tcp:4000 --timeout 60000
+
+    - name: Run GraphQL External Tests
+      run: npm run test-graphql-external
+
+    - name: Run GraphQL Controller Tests
+      run: npm run test-graphql-controller
